# ReversiServerClientGame

./: AiPlayer.cpp  AiPlayer.h  BasicRules.h  CMakeLists.txt  CleanPort.txt  ConsoleBoard.cpp  HumanPlayer.cpp  PointsList.cpp  PointsList.h  README.md  Rules.cpp  git_log.txt  info.txt  makefile  project_choose.txt
Client/: CMakeLists.txt
Client/src/: Client.cpp  Client.h  ConsoleBoard.cpp  HumanPlayer.h  main.cpp
Client/test/: TestBoard.h  TestPlayer.h
Server/: Server.cpp  Server.h
client/: AiPlayer.cpp  AiPlayer.h  BasicRules.cpp  Client.cpp  Client.h  ConsoleBoard.cpp  ConsoleBoard.h  HumanPlayer.cpp  HumanPlayer.h  Player.h  Point.h  PointsList.cpp  PointsList.h  RemotePlayer.cpp  RemotePlayer.h  csettings.txt  main.cpp  makefile
client/googletest-release-1.8.0/googlemock/include/gmock/: gmock-matchers.h
client/googletest-release-1.8.0/googletest/cmake/: internal_utils.cmake
client/googletest-release-1.8.0/googletest/codegear/: gtest_link.cc
lib/googletest-release-1.8.0/googlemock/include/gmock/: gmock-spec-builders.h
lib/googletest-release-1.8.0/googletest/include/gtest/: gtest-death-test.h
lib/googletest-release-1.8.0/googletest/include/gtest/internal/: gtest-internal.h  gtest-param-util.h  gtest-port.h
lib/googletest-release-1.8.0/googletest/samples/: sample1_unittest.cc
lib/googletest-release-1.8.0/googletest/src/: gtest-internal-inl.h  gtest.cc
lib/googletest-release-1.8.0/googletest/test/: gtest_main_unittest.cc
lib/googletest-release-1.8.0/googletest/xcode/Config/: DebugProject.xcconfig
server/: CloseCommand.h  Command.h  CommandsManager.cpp  CommandsManager.h  GameCollection.cpp  GameCollection.h  GameInfo.cpp  GameInfo.h  JoinCommand.cpp  JoinCommand.h  ListCommand.cpp  ListCommand.h  PlayCommand.h  Server.cpp  Server.h  StartCommand.cpp  StartCommand.h  Task.h  ThreadPool.cpp  ThreadPool.h  main.cpp  makefile
src/: AiPlayer.cpp  AiPlayer.h  BasicRules.cpp  BasicRules.h  Board.cpp  Board.h  Client.cpp  ConsoleBoard.h  HumanPlayer.cpp  HumanPlayer.h  Player.h  Point.cpp  Point.h  PointsList.cpp  PointsList.h  Rules.h  main.cpp
test/: BoardTest.cpp  BoardTest.h  JustATest.cpp  TestBoard.cpp  TestBoard.h  TestPlayer.cpp  TestPlayer.h  TestPoint.cpp  TestPoint.h  TestPointList.cpp  TestPointList.h  TestRules.cpp  TestRules.h  gtest_main.cpp  gtest_main.h
